# fake-data-generator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: field.rs  lib.rs
src/format/: mod.rs
src/generators/: mod.rs  null.rs
